2007-10-17  Martin Lambers <marlam@marlam.de>

	* src/viewpoint_selector.cpp, src/channel_selector.cpp: Update and add
	keyboard shortcuts.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/Makefile.am, src/cvlview.qrc, src/icons,
	src/icons/prev.png, src/icons/next.png: Move data set switching to
	toolbar buttons.
	* src/cvlview.cpp: Add new filter "All supported files" to open
	dialog.
	* src/cvlview.cpp, src/interpolation_selector.cpp: Shorten the button
	to save space.
	* src/viewpoint_selector.cpp: Change keyboard shortcut to avoid
	collision.

2007-10-16  Martin Lambers <marlam@marlam.de>

	* src/interpolation_selector.cpp, src/viewpoint_selector.cpp: Add
	keyboard shortcuts to buttons.
	* src/pseudocolor_selector.cpp, src/frame_info.h,
	src/channel_selector.h, src/datafile.h, src/cvlview.cpp, src/main.cpp,
	src/interpolation_selector.cpp, src/gamma_selector.h,
	src/channel_info.h, src/viewpoint_selector.h, src/range_selector.h,
	src/pseudocolor_selector.h, src/frame_info.cpp,
	src/channel_selector.cpp, src/datafile.cpp, src/gamma_selector.cpp,
	src/channel_info.cpp, src/cvlview.h, src/viewpoint_selector.cpp,
	src/Makefile.am, src/interpolation_selector.h, src/range_selector.cpp:
	Support multiple data sets in single data files. Reset settings if and
	only if a new data file is opened; preserve them when switching data
	sets.
	* configure.ac, NEWS, doc/cvlview.texi: Bump version to 0.2.0.
	* src/channel_selector.h, src/channel_selector.cpp: Preserve channel
	setting when switching between data sets in the same data file.
	* gnulib/m4/lseek.m4, gnulib/m4/fseeko.m4, gnulib/m4/ftello.m4, 
	gnulib/m4/gnulib-comp.m4, gnulib/m4/gnulib-cache.m4, gnulib/fseeko.c,
	gnulib/lseek.c, gnulib/ftello.c, gnulib/Makefile.am: Add gnulib fseeko
	and ftello modules for W32 portability.
	* src/cvlview.cpp: Print CVL version in AboutBox.
	* configure.ac: Require CVL >= 0.2.2.

2007-10-11  Martin Lambers <marlam@marlam.de>
