@@ -1,3 +1,8 @@
+2007-10-18  Martin Lambers <marlam@marlam.de>
+
+	* src/range_selector.h, src/range_selector.cpp: Allow much more
+	fine-grained control over the histogram and the range selection.
+
 2007-10-17  Martin Lambers <marlam@marlam.de>
 
 	* src/viewpoint_selector.cpp, src/channel_selector.cpp: Update and add
